fix weird gap

--- a/browser-extension/carts.css
+++ b/browser-extension/carts.css
@@ -44,7 +44,7 @@
   margin: 10px 2px;
 }
 
-.panel {
+.accordion-panel {
   /* padding: 0 -20px 0 0; */
   display: none;
   /* background-color: rgb(58, 56, 56); */
